# Compressed_sigma-protocol

./: .gitignore  Cargo.toml  README.md
src/: commitments.rs  group.rs  lib.rs
src/nizk/: bullet.rs  mod.rs  nozk_bullet.rs  nozk_noinv_bullet.rs
src/polynomial/: lagrange.rs  mod.rs
src/polynomial/univariate/: dense.rs  mod.rs  sparse.rs
src/scalar/: mod.rs
src/sigma_protocol/: amortized_basic_sigma_protocol.rs  basic_protocol_2.rs  basic_sigma_protocol.rs  compressed_basic_sigma_protocol.rs  mod.rs  nozk_protocol_3.rs  nozk_protocol_4.rs  scalar_math.rs  sigma_phase.rs  zk_amortized_protocol_2.rs  zk_amortized_protocol_5.rs  zk_amortized_protocol_6.rs  zk_amortized_protocol_7.rs  zk_basic_protocol_2.rs  zk_protocol_10.rs  zk_protocol_11.rs  zk_protocol_5.rs  zk_protocol_7.rs  zk_protocol_8.rs  zk_protocol_9.rs
